# phyla-lang

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: basic_usage.rs  compare_with_js.rs  naming_system.rs
src/: culture.rs  generation.rs  genome.rs  language.rs  lib.rs  morphology.rs  phonology.rs  seeded_rng.rs
src/naming/: epithet.rs  mod.rs  personal.rs  place.rs
tests/: integration_test.rs
